--- a/index.html
+++ b/index.html
@@ -2,37 +2,43 @@
 
 <head>
     <title>relocateMe</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <form class= "jobsForm">
-        <label for="jobField">Enter search item</label><br>
-        <input type="text" class="jobField" placeholder="Find job">
-        <!--<label for="cityField">Enter search item</label>-->
-        <input type="text" class="cityField" placeholder="In what city">
-        <!--<label for="stateField">Enter search item</label>-->
-        <input type="text" class="stateField" placeholder="In what state">
-        <button type="submit" class="submitButton" value="submit">Submit</button>
-    </form>
-    <div class="resultsBlock">
-        <div class="jobsBlock left">
-            <ul></ul>
+    <div class="wrapper">
+        <form class= "jobsForm">
+            <label for="jobField">Enter search item</label><br>
+            <input type="text" class="jobField" placeholder="Find job">
+            <!--<label for="cityField">Enter search item</label>-->
+            <input type="text" class="cityField" placeholder="In what city">
+            <!--<label for="stateField">Enter search item</label>-->
+            <input type="text" class="stateField" placeholder="In what state">
+            <button type="submit" class="submitButton" value="submit">Submit</button>
+        </form>
+        <div class="resultsBlock clearfix">
+            <div class="jobsBlock left hidden">
+                <ul></ul>
+            </div>
+            <div class="cityStateInfoBlock left hidden">
+                <div class="qualityOfLife">
+                    <h2>Quality of Life</h2>
+                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Life quality score - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/scores/?currency=USD&citySwitcher=false" data-max-width="770" data-height="977" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
+                </div>
+                <div class="costOfLiving">
+                    <h2>Cost of Living</h2>
+                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Costs of living - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/costs/?currency=USD&citySwitcher=false" data-max-width="770" data-height="920" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
+                </div>
+                <div class="jobSalary">
+                    <h2>Job Salary</h2>
+                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Job salary calculator - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/salaries/?currency=USD&citySwitcher=false" data-max-width="770" data-height="727" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
+                </div>
+            </div>
         </div>
-        <div class="cityStateInfoBlock left">
-            <div class="qualityOfLife">
-                <h2>Quality of Life</h2>
-                <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Life quality score - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/scores/?currency=USD&citySwitcher=false" data-max-width="770" data-height="977" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-            </div>
-            <div class="costOfLiving">
-                <h2>Cost of Living</h2>
-                <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Costs of living - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/costs/?currency=USD&citySwitcher=false" data-max-width="770" data-height="920" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-            </div>
-            <div class="jobSalary">
-                <h2>Job Salary</h2>
-                <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Job salary calculator - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/salaries/?currency=USD&citySwitcher=false" data-max-width="770" data-height="727" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-            </div>
-        </div>
-    </div>
+    </div><!-- end .wrapper -->
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/cities.js"></script>
     <script src="js/app.js"></script>
