changeing url to http and some other changes

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </form>
         <div class="resultsBlock clearfix">
             <div class="jobsBlock left hidden">
-                <ul></ul>
+                
             </div>
             <div class="cityStateInfoBlock left hidden">
-                <div class="qualityOfLife">
+                <!--<div class="qualityOfLife">
                     <h2>Quality of Life</h2>
                     <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Life quality score - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/scores/?currency=USD&citySwitcher=false" data-max-width="770" data-height="977" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
                 </div>
@@ -35,7 +35,7 @@
                 <div class="jobSalary">
                     <h2>Job Salary</h2>
                     <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Job salary calculator - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/salaries/?currency=USD&citySwitcher=false" data-max-width="770" data-height="727" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-                </div>
+                </div>-->
             </div>
         </div>
     </div><!-- end .wrapper -->
