Adding heaaders to the results section

--- a/index.html
+++ b/index.html
@@ -21,21 +21,12 @@
         </form>
         <div class="resultsBlock clearfix">
             <div class="jobsBlock left hidden">
+                <h2>Job Results</h2>
                 
             </div>
             <div class="cityStateInfoBlock left hidden">
-                <!--<div class="qualityOfLife">
-                    <h2>Quality of Life</h2>
-                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Life quality score - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/scores/?currency=USD&citySwitcher=false" data-max-width="770" data-height="977" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-                </div>
-                <div class="costOfLiving">
-                    <h2>Cost of Living</h2>
-                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Costs of living - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/costs/?currency=USD&citySwitcher=false" data-max-width="770" data-height="920" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-                </div>
-                <div class="jobSalary">
-                    <h2>Job Salary</h2>
-                    <a class="teleport-widget-link" href="https://teleport.org/cities/chicago/">Job salary calculator - chicago</a><script async class="teleport-widget-script" data-url="https://teleport.org/cities/chicago/widget/salaries/?currency=USD&citySwitcher=false" data-max-width="770" data-height="727" src="https://teleport.org/assets/firefly/widget-snippet.min.js"></script>
-                </div>-->
+                <h2>City Details</h2>
+                
             </div>
         </div>
     </div><!-- end .wrapper -->
