Progress: adding the quality of life and the styles

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
         <div class="resultsBlock clearfix">
             <div class="jobsBlock left hidden">
                 <h2>Job Results</h2>
-                
+                <div class="jobResults">
+
+                </div>
             </div>
             <div class="cityStateInfoBlock left hidden">
-                <h2>City Details</h2>
-                
+                <h2><span class="cityName"></span> Details</h2>
+                <div class="summary"></div>
+                <h2>Quality of Life Scores</h2>
+                <div class="qualityOfLifeScores"></div>
             </div>
         </div>
     </div><!-- end .wrapper -->
