Breaking span tag to new line

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="cityStateInfoBlock left">
                     <h2><span class="cityName"></span> Details<br><span class="footnote">(Powered by: Teleport.org)</span></h2>
                     <div class="summary"></div>
-                    <h2>Quality of Life Scores <span class="footnote">(scores out of 10)</span></h2>
+                    <h2>Quality of Life Scores <br><span class="footnote">(scores out of 10)</span></h2>
                     <div class="qualityOfLifeScores"></div>
                     
                     <h2 class="costOfLivingHeader"></h2>
