Style tweeks and small updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" class="jobField left" placeholder="Find your job...">
                 <input type="text" class="cityField left" placeholder="in what city...">
                 <input type="text" class="stateField left" placeholder="and in what state...">
-                <button type="submit" class="submitButton" value="submit">Submit</button>
+                <button type="submit" class="submitButton"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
         </section>
         <div class="resultsWrapper hidden">
