--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="js/vegas/vegas.min.css">
     
 
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/teleport-autocomplete.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -22,22 +23,23 @@
                 <p>Hey there! Looking for a <span>job</span> and a reason to <span>relocate</span>? Fill out our <span>form</span> below, and get a list of jobs and the <span>quality of life</span>, <span>cost of living</span>, and <span>more</span> on the city you're looking to <span>relocate</span> to. <span>Enjoy!</span></p>
             </div>
             <form class="jobsForm clearfix">
-                <!--<label for="jobField">Enter the job you're looking for </label>-->
                 <input type="text" class="jobField left" placeholder="Find your job...">
-                <input type="text" class="cityField left" placeholder="in what city...">
-                <input type="text" class="stateField left" placeholder="and in what state...">
+                <input type="text" class="cityField left" placeholder="in what city and state...">
+                <!--<input type="text" class="stateField left" placeholder="and in what state...">-->
                 <button type="submit" class="submitButton"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
         </section>
         <div class="resultsWrapper hidden">
-            <i class="loadingIcon fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+            
             <div class="resultsBlock clearfix">
                 <div class="jobsBlock left">
                     <h2>Job Results<br><span class="footnote">(Powered by: Indeed.com)</span></h2>
                     <div class="jobResults"></div>
+                    <i class="jobs loadingIcon fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                 </div>
-                <div class="cityStateInfoBlock left">
+                <div class="cityStateInfoBlock right">
                     <h2><span class="cityName"></span> Details<br><span class="footnote">(Powered by: Teleport.org)</span></h2>
+                    <i class="location loadingIcon fa fa-spinner fa-pulse fa-3x fa-fw"></i>
                     <div class="summary"></div>
                     <h2 class="qualityOfLifeHeader"></h2>
                     <div class="qualityOfLifeScores"></div>
@@ -60,6 +62,7 @@
     <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/vegas/vegas.min.js"></script>
     <script src="js/cities.js"></script>
+    <script src="js/teleport-autocomplete.js"></script>
     <script src="js/app.js"></script>
 </body>
 
