Committing most recent changes

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     
                     <h2 class="educationHeader"></h2>
                     <div class="educationSection"></div>
+                    <a class="findOutMoreLink" target="_blank"></a>
                 </div>
             </div>
         </div><!-- end .wrapper -->
